Fix bg sidebar being visible on overscroll

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -5,6 +5,13 @@
   color: $primary-color-text;
 }
 
+.closed {
+  opacity: 0;
+}
+.opened {
+  opacity: 1;
+}
+
 .chatroomSelect {
   flex: 1 0 auto;
 }
